syntax = "proto3";

package tracer_study_grpc;
option go_package = "./;pb";

import "pagination.proto";

message Responden {
    uint32 id = 1;
    string nim = 2;
    string nama = 3;
    uint32 status_update = 4;
    string jalur_masuk = 5;
    string tahun_masuk = 6;
    uint32 lama_studi = 7;
    string kode_fakultas = 8;
    string kode_prodi = 9;
    string jenis_kelamin = 10;
    string email = 11;
    string hp = 12;
    string ipk = 13;
    string tanggal_sidang = 14;
    string tahun_sidang = 15;
    string tanggal_wisuda = 16;
    string nik = 17;
    string npwp = 18;
    string created_at = 19;
    string updated_at = 20;
    string deleted_at = 21;
}

message GetAllRespondenRequest {
    general.PaginationRequest pagination = 1;
}

message GetAllRespondenResponse {
    uint32 code = 1;
    string message = 2;
    general.Pagination pagination = 3;
    repeated Responden data = 4;
}

message GetRespondenByNimRequest {
    string nim = 1;
}

message GetRespondenByNimResponse {
    uint32 code = 1;
    string message = 2;
    Responden data = 3;
}

message RespondenUpdate {
    string ipk = 1;
    string kodedikti = 2;
    string jenjang = 3;
    string namaprodi = 4;
    string namaprodi2 = 5;
    string kodeprodi = 6;
    string kodeprodi2 = 7;
    string kodefak = 8;
    string namafak = 9;
    string jlrmasuk = 10;
    string thnmasuk = 11;
    string lamastd = 12;
}

message UpdateRespondenFromSiakRequest {
    string nim = 1;
}

message UpdateRespondenResponse {
    uint32 code = 1;
    string message = 2;
    Responden data = 3;
}

message CreateRespondenRequest {
    string nim = 1;
}

message CreateRespondenResponse {
    uint32 code = 1;
    string message = 2;
    Responden data = 3;
}

message GetRespondenByNimListRequest {
    repeated string nims = 1;
}

service RespondenService {
    rpc GetAllResponden(GetAllRespondenRequest) returns (GetAllRespondenResponse) {};
    rpc GetRespondenByNim(GetRespondenByNimRequest) returns (GetRespondenByNimResponse) {};
    rpc UpdateRespondenFromSiak(UpdateRespondenFromSiakRequest) returns (UpdateRespondenResponse) {};
    rpc CreateResponden(CreateRespondenRequest) returns (CreateRespondenResponse) {};
    rpc UpdateResponden(Responden) returns (UpdateRespondenResponse) {};
    rpc GetRespondenByNimList(GetRespondenByNimListRequest) returns (GetAllRespondenResponse) {};
}